Fixes #95: Layout Issues in Templates Panel

--- a/core/theme/asset/sass/style.scss
+++ b/core/theme/asset/sass/style.scss
@@ -125,6 +125,10 @@ ul.details li {
 
 }
 
+.thumbnails li:nth-child(3n+1) {
+	margin-left: 0;
+}
+
 .table-striped ul {
 	li {
 		display:inline;
